tests/e2e/semantics/dot_index_object.error
Error: syntax error in story at line 2, column 9

2|        a = server.data["foobar"]
              ^^^^^^^^^^^^^^^^^^^^

E0151: Object `server` has no property `data`.
